--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<strong><a href="#/7/"><font color="#ffffff">特色好站</font></a></strong>
 				<strong><a href="#/8/"><font color="#ffffff">动漫ACG</font></a></strong>
 				<strong><a href="#/9/"><font color="#ffffff">信息交友</font></a></strong>
-				<strong><a href="#/10/"><font color="#ffffff">国内论坛</font></a></strong>
+				<strong><a href="#/10/"><font color="#ffffff">国内福利</font></a></strong>
 				<strong><a href="#/11/"><font color="#ffffff">島國情报</font></a></strong>
 				<strong><a href="#/12/"><font color="#ffffff">欧美情报</font></a></strong>
                 <strong><a href="#/13/"><font color="#ffffff">VR资源</font></a></strong>
@@ -268,6 +268,8 @@
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
+<li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
+<li><a href="http://www.8090yule.com/" target="_blank">8090av影院</a></li>
 <li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
 <li><a href="http://www.taoludy.com/" target="_blank">淘撸在线AV</a></li>
 <li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
@@ -495,9 +497,9 @@
 <li><a href="http://www.52yuanwei.mobi/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
 <li><a href="http://www.u15loli.com/?fromuid=13188" target="_blank">U15萝莉小店</a></li>
-<li><a href="http://u15.info/" target="_blank">U-15天堂</a></li>
+<li><a href="https://u15.info/" target="_blank">U-15天堂</a></li>
 <li><a href="http://www.wumeisz.net/?fromuid=9546" target="_blank">妩媚山庄</a></li>
-<li><a href="http://nztdsm5.com/?fromuid=411498" target="_blank">女主天地</a></li>
+<li><a href="http://nztdsm6.com/?fromuid=411498" target="_blank">女主天地</a></li>
 <li><a href="http://www.milfsalute.com/" target="_blank">熟女图片</a></li>
 <li><a href="http://www.bigbreastarchive.com/" target="_blank">大奶图片</a></li>
 <li><a href="http://www.foxhq.com/" target="_blank">爆乳丰臀画廊</a></li>
@@ -510,6 +512,7 @@
 <li><a href="http://www.meigui98.cc/?fromuid=161579" target="_blank">玫瑰酒吧</a></li>
 <li><a href="https://lxty66.com/" target="_blank">莲秀图院</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
+<li><a href="http://bdsmland.org/" target="_blank">Bdsmland</a></li>
 <li><a href="http://www.oklesbians.com/" target="_blank">OK LesBians</a></li>
 <li><a href="http://www.thelesbianporn.com/" target="_blank">Lesbian Porn</a></li>
 <li><a href="http://www.ladyboyweb.com/" target="_blank">Ladyboyweb</a></li>
@@ -598,7 +601,7 @@
 		</div>
 								<div class="link">
 		 <div class="linka">
-		<strong><a name="/10/">国内论坛</a></strong>
+		<strong><a name="/10/">国内福利</a></strong>
 		<div class="linkl">
 		<ul>
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
@@ -607,6 +610,7 @@
 <li><a href="http://www.wg438.com/" target="_blank">超碰论坛</a></li>
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
+<li><a href="http://www.52flk.com/" target="_blank">52福利库</a></li>
 <li><a href="http://www.0304.me/" target="_blank">小陆资源网</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
@@ -652,8 +656,8 @@
 <li><a href="http://www.51fls.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.yaozy.com/" target="_blank">番号大全</a></li>
-<li><a href="http://www.141jav.com/" target="_blank">141jav</a></li>
-<li><a href="http://mo666.net/" target="_blank">Dioguitar23</a></li>
+<li><a href="http://javpop.biz/" target="_blank">JAVPOP</a></li>
+<li><a href="http://mo777.net/" target="_blank">Dioguitar23</a></li>
 <li><a href="http://gravure.com/tour/pages/index.php" target="_blank">GRAVURE</a></li>
 <li><a href="http://javarchive.com/" target="_blank">JavArchive</a></li>
 <li><a href="http://marks.fm/contents/" target="_blank">AV事務所</a></li>
