--- a/index.html
+++ b/index.html
@@ -66,19 +66,17 @@
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
-<li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
+<li><a href="http://204.44.109.178/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
-<li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
-<li><a href="http://www.papapa88.com/?fromuid=123" target="_blank">啪啪啪88</a></li>
 <li><a href="http://www.70b5.com/?fromuid=16580" target="_blank">麒麟臂论坛</a></li>
 <li><a href="http://cfukt.xyz/" target="_blank">CFUKT</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
@@ -90,7 +88,7 @@
 <li><a href="http://www.kanxav.ga/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayaun.com/index.php" target="_blank">玛雅网</a></li>
-<li><a href="http://tech.taoyin365.org/?fromuid=153059" target="_blank">桃隐社区</a></li>
+<li><a href="http://super.taoy9.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
 <li><a href="http://xocat2.com/f/?fromuid=1006945" target="_blank">Xocat Forum</a></li>
@@ -136,7 +134,6 @@
 <li><a href="http://serendang.us/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
-<li><a href="http://c-street.us/bbs/?fromuid=164277" target="_blank">华人街</a></li>
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs6.com/?fromuid=4521" target="_blank">久久热论坛</a></li>
@@ -146,6 +143,7 @@
 <li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.yxj259.com/?fromuid=416640" target="_blank">亿性家</a></li>
+<li><a href="http://www.xav333.com/forum.php" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
@@ -183,13 +181,13 @@
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
 <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
 <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
-<li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
+<li><a href="http://1253.cf/" target="_blank">A天堂导航</a></li>
+<li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
-<li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
@@ -210,13 +208,12 @@
 <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
 <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
 <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
-<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
+<li><a href="http://www.yikufl.com/" target="_blank">一库福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
-<li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
 <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
 <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
 <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
-<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
+<li><a href="http://www.caoluotuo.org/" target="_blank">草骆驼导航</a></li>
 <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
 <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
 <li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
@@ -225,13 +222,12 @@
 <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
 <li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
-<li><a href="http://www.ds555.cc/" target="_blank">男人福利導航</a></li>
+<li><a href="http://www.ds555.cc/" target="_blank">粉色男人導航</a></li>
 <li><a href="http://www.yidianpai.com/" target="_blank">一点拍导航</a></li>
 <li><a href="http://www.dagongji.me/" target="_blank">大公鸡导航网</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
 <li><a href="http://www.shenma068.cn/" target="_blank">色妹子导航</a></li>
-<li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
 <li><a href="http://www.cjkdl.xyz/" target="_blank">苍井空导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
@@ -256,6 +252,7 @@
 <li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.slzxtv.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.yslav.com/" target="_blank">夜色撸</a></li>
+<li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://chushui99.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
@@ -277,6 +274,7 @@
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
 <li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
+<li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐电影</a></li>
 <li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
@@ -317,6 +315,7 @@
 <li><a href="http://www.yyluav.com/" target="_blank">夜夜撸AV</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
+<li><a href="http://www.51ganb.com/" target="_blank">官人我要</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.cpzx1.pw/" target="_blank">超碰视频</a></li>
@@ -332,8 +331,8 @@
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
 <li><a href="http://www.caopengwang.top/" target="_blank">超碰AV网</a></li>
-<li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://jiujiuredizhi.xyz/" target="_blank">团团热视频</a></li>
+<li><a href="http://www.yaoav7.com/" target="_blank">要AV高清视频</a></li>
 <li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
 <li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
 <li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
@@ -391,10 +390,9 @@
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
-<li><a href="http://c8117.com/" target="_blank">男人视频</a></li>
-<li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
+<li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
+<li><a href="http://avjidi.net/" target="_blank">AV基地</a></li>
 <li><a href="http://99rr11.com/" target="_blank">久久视频</a></li>
-<li><a href="http://www.yaoav7.com/" target="_blank">要AV高清视频</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
