--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.hong07.com/" target="_blank">红秀资源网</a></li>
-<li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
+<li><a href="http://xisezi.info/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
@@ -169,9 +169,9 @@
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://www.fulidh.cf/" target="_blank">蓝色福利导航</a></li> 
-<li><a href="http://www.500dh.me/" target="_blank">500导航</a></li>
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
+<li><a href="http://www.500dh.me/" target="_blank">500导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
 <li><a href="http://www.78links.com/" target="_blank">78导航</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
@@ -240,6 +240,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://www.dushewang.top/" target="_blank">毒蛇AV影院</a></li>
+<li><a href="http://www.boduoyejieyi.pw/" target="_blank">波多野结衣电影</a></li>
 <li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
@@ -272,6 +273,7 @@
 <li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
+<li><a href="http://www.repianvv.pw/" target="_blank">热片SeX大电影</a></li>
 <li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐电影</a></li>
@@ -285,6 +287,7 @@
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
+<li><a href="http://www.bbbb8.info/" target="_blank">B8视频</a></li>
 <li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
@@ -312,6 +315,9 @@
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
+<li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
+<li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
+<li><a href="http://www.kedougood.com/" target="_blank">柯兜在线</a></li>
 <li><a href="http://www.yyluav.com/" target="_blank">夜夜撸AV</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
@@ -333,7 +339,7 @@
 <li><a href="http://www.caopengwang.top/" target="_blank">超碰AV网</a></li>
 <li><a href="http://jiujiuredizhi.xyz/" target="_blank">团团热视频</a></li>
 <li><a href="http://www.yaoav7.com/" target="_blank">要AV高清视频</a></li>
-<li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
+<li><a href="http://www.yuhuoge.com/" target="_blank">欲火阁</a></li>
 <li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
 <li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
@@ -606,6 +612,7 @@
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
 <li><a href="http://www.wg438.com/" target="_blank">超碰论坛</a></li>
+<li><a href="http://www.lufuliba.com/" target="_blank">撸福利吧</a></li>
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
 <li><a href="http://www.52flk.com/" target="_blank">52福利库</a></li>
