--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <li><a href="http://cl.gtta.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://lady.cf/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
-<li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
+<li><a href="http://fl47.co/?fromuid=5495" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.195/bbs/index.php" target="_blank">色中色</a></li>
@@ -182,11 +182,11 @@
 <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
 <li><a href="http://1253.cf/" target="_blank">A天堂导航</a></li>
 <li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
-<li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
+<li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
@@ -196,7 +196,6 @@
 <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://lvjiabai1.info/" target="_blank">绿桃K导航</a></li>
 <li><a href="http://www.pigutu.pw/" target="_blank">第一福利导航</a></li>
-<li><a href="http://www.chaxuedh.pw/" target="_blank">插穴福利导航</a></li>
 <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
 <li><a href="http://www.meiniang.pw/" target="_blank">媚娘福利导航</a></li>
 <li><a href="http://www.1024fuli.pw/" target="_blank">1024福利导航</a></li>
@@ -226,8 +225,8 @@
 <li><a href="http://www.dagongji.me/" target="_blank">大公鸡导航网</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
-<li><a href="http://www.shenma068.cn/" target="_blank">色妹子导航</a></li>
 <li><a href="http://www.cjkdl.xyz/" target="_blank">苍井空导航</a></li>
+<li><a href="http://www.mtzy8.com/" target="_blank">撸十次导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
@@ -242,7 +241,6 @@
 <li><a href="http://www.boduoyejieyi.pw/" target="_blank">波多野结衣电影</a></li>
 <li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
-<li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
@@ -257,7 +255,6 @@
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
-<li><a href="http://www.jj51.info/" target="_blank">鸡鸡视频</a></li>
 <li><a href="http://www.zhaoav.xyz/" target="_blank">青青草</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
@@ -265,8 +262,11 @@
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
+<li><a href="http://www.s1shipin.com/" target="_blank">色艺视频</a></li>
 <li><a href="http://www.444ap.com/" target="_blank">日本AV电影</a></li>
 <li><a href="http://www.8090yule.com/" target="_blank">8090av影院</a></li>
+<li><a href="http://www.tianxingseai.top/" target="_blank">甜性涩爱</a></li>
+<li><a href="http://www.sejishikong.top/" target="_blank">色即是空</a></li>
 <li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
 <li><a href="http://www.taoludy.com/" target="_blank">淘撸在线AV</a></li>
 <li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
@@ -276,6 +276,7 @@
 <li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
 <li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://www.linjiajiejie.top/" target="_blank">邻家姐姐电影</a></li>
+<li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
@@ -291,10 +292,13 @@
 <li><a href="http://www.1xs6.com/" target="_blank">久久热精品</a></li>
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
-<li><a href="http://cao78.xyz/" target="_blank">操jb视频</a></li>
+<li><a href="http://www.papapavdo.gq/" target="_blank">啪啪啪视频</a></li>
+<li><a href="http://www.luluba.ml/" target="_blank">lulu吧在线</a></li>
+<li><a href="http://www.javdo.ga/" target="_blank">JAV在线视频</a></li>
+<li><a href="http://www.javdo.ga/" target="_blank">18+在线视频</a></li>
+<li><a href="http://www.javdo.ga/" target="_blank">Cao78视频</a></li>
 <li><a href="http://www.666jjy.com/" target="_blank">涩情小电影</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
-<li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
@@ -302,16 +306,12 @@
 <li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
-<li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
 <li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
 <li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://www.52x.club/" target="_blank">我爱插</a></li>
 <li><a href="http://www.91lu.club/" target="_blank">就要撸</a></li>
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
-<li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
-<li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
-<li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
@@ -323,7 +323,6 @@
 <li><a href="http://www.51ganb.com/" target="_blank">官人我要</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
-<li><a href="http://www.cpzx1.pw/" target="_blank">超碰视频</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
@@ -338,38 +337,29 @@
 <li><a href="http://www.caopengwang.top/" target="_blank">超碰AV网</a></li>
 <li><a href="http://jiujiuredizhi.xyz/" target="_blank">团团热视频</a></li>
 <li><a href="http://www.yaoav7.com/" target="_blank">要AV高清视频</a></li>
-<li><a href="http://www.yuhuoge.com/" target="_blank">欲火阁</a></li>
 <li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
-<li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
 <li><a href="http://lulunai.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://www.mowang.info/" target="_blank">魔王在线</a></li>
-<li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
-<li><a href="http://www.lu667.com/" target="_blank">撸一撸</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
-<li><a href="http://www.51lulu.info/" target="_blank">51撸AV在线</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb123.com/" target="_blank">AV淘宝</a></li>
-<li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xxx1.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.qqqqmao.com/" target="_blank">东京热</a></li>
-<li><a href="http://www.99ff1.com/" target="_blank">久久热视频</a></li>
+<li><a href="http://99ff3.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl1024.com/" target="_blank">任性撸</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
 <li><a href="http://www.8858av.com/" target="_blank">天天撸</a></li>
-<li><a href="http://www.u1k.win/" target="_blank">优衣库</a></li>
-<li><a href="http://cn.btmao.bid/" target="_blank">BT猫自拍</a></li>
-<li><a href="http://www.5557t.com/" target="_blank">用力撸</a></li>
 <li><a href="http://www.qingjunlu3.com/" target="_blank">请君撸</a></li>
 <li><a href="http://www.8858av.com/" target="_blank">撸撸网</a></li>
 <li><a href="http://www.aiqqc.com/" target="_blank">青青草</a></li>
@@ -377,15 +367,13 @@
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
-<li><a href="https://www.47sihu.com/" target="_blank">四虎影库</a></li>
-<li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
-<li><a href="http://www.95gav.com/" target="_blank">91GAV</a></li>
+<li><a href="https://www.5333dd.com/" target="_blank">四虎影库</a></li>
+<li><a href="http://www.00bobo.com/" target="_blank">37pao</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
 <li><a href="http://koreanfilmhdcollections.blogspot.jp/" target="_blank">韩国三极</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
-<li><a href="http://www.tuxse.com/" target="_blank">超碰在线</a></li>
-<li><a href="https://www.189df.com/" target="_blank">东方AV在线</a></li>
+<li><a href="http://www.168porn.net/" target="_blank">IAVporn</a></li>
 <li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://6666fuli.com/" target="_blank">6666视频</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
@@ -393,15 +381,15 @@
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.700zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
-<li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
 <li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
 <li><a href="http://avjidi.net/" target="_blank">AV基地</a></li>
 <li><a href="http://99rr11.com/" target="_blank">久久视频</a></li>
+<li><a href="http://hgg156.com/" target="_blank">坏哥哥</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
-<li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
+<li><a href="http://www.7u8e.com/" target="_blank">第九鲁</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
 <li><a href="http://www.13jiuseteng.com/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.meimei7.com/" target="_blank">在线手机视频</a></li>
